--- a/Resources/Prototypes/_CP14/Entities/Structures/test.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/test.yml
@@ -27,6 +27,7 @@
   parent: BaseStructureDynamic
   categories: [ ForkFiltered ]
   name: DPS Meter
+  description: Counts the average damage per second. If you stop hitting it, it shows the result.
   suffix: Debug, DO NOT MAP
   components:
   - type: Sprite
