--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
@@ -31,6 +31,7 @@
     quickEquip: false
     breakOnMove: false
   - type: CP14MeleeParriable
+  - type: CP14LabeledRenaming
 
 - type: entity
   parent: CP14ModularGripBase
