--- a/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
@@ -19,6 +19,10 @@
         amount: 7
       - id: CP14VialSmall
         amount: 5
+      - id: CP14Paper
+        amount: 2
+      - id: CP14PenFeather
+        amount: 1
         #Random start resource
       - id: CP14VialSmallGroundQuartz
       - id: CP14VialSmallGroundQuartz
@@ -109,6 +113,10 @@
       - id: CP14CopperBar10
       - id: CP14IronBar10
       - id: CP14GoldBar5
+      - id: CP14Paper
+        amount: 2
+      - id: CP14PenFeather
+        amount: 1
 
 - type: entity
   parent: CP14WoodenCloset
