--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_caves_ring.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_caves_ring.yml
@@ -4,7 +4,7 @@
   locationConfig: CP14DemiplaneCavesRing
   name: cp14-demiplane-location-cave
   tags:
-  - CP14DemiplaneOres
+  - CP14DemiplaneOresUnderground
   - CP14DemiplaneUnderground
 
 - type: dungeonConfig
