--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
@@ -31,12 +31,13 @@
     quickEquip: false
     breakOnMove: false
   - type: CP14MeleeParriable
+  - type: CP14LabeledRenaming
 
 - type: entity
   parent: CP14ModularGripBase
   id: CP14ModularGripShort
   abstract: true
-  description: A short handle for a weapon or tool.
+  description: A tool for your purposes!
   components:
   - type: CP14ModularCraftStartPoint
     startSlots:
@@ -58,7 +59,7 @@
   parent: CP14ModularGripBase
   id: CP14ModularGripLong
   abstract: true
-  description: long, two-handed handle for heavy weapons or large tools.
+  description: A tool for your purposes! Now long enough to hold in two hands.
   components:
   - type: CP14ModularCraftStartPoint
     startSlots:
