--- a/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/cheese.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/cheese.yml
@@ -66,6 +66,8 @@
   description: A thin slice of delicious smelling cheese.
   categories: [ ForkFiltered ]
   components:
+  - type: Item
+    size: Tiny
   - type: FlavorProfile
     flavors:
       - cheesy
