--- a/Resources/Prototypes/_CP14/Catalog/Cargo/Store/sell.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/Store/sell.yml
@@ -1,15 +1,15 @@
 - type: storePositionSell
-  id: GoldBars
-  name: cp14-store-sell-goldbar-name
-  desc: cp14-store-sell-goldbar-desc
+  id: CopperBars
+  name: cp14-store-sell-copperbar-name
+  desc: cp14-store-sell-copperbar-desc
   icon: 
-    sprite: _CP14/Objects/Materials/gold_bar.rsi
+    sprite: _CP14/Objects/Materials/copper_bar.rsi
     state: bar_3
   price: 
-    min: 1000
-    max: 1000
+    min: 20
+    max: 30
   service: !type:CP14SellStackService
-    stackId: CP14GoldBar
+    stackId: CP14CopperBar
     count: 10
 
 - type: storePositionSell
@@ -20,24 +20,24 @@
     sprite: _CP14/Objects/Materials/iron_bar.rsi
     state: bar_3
   price: 
-    min: 500
-    max: 500
+    min: 200
+    max: 300
   service: !type:CP14SellStackService
     stackId: CP14IronBar
     count: 10
 
 - type: storePositionSell
-  id: CopperBars
-  name: cp14-store-sell-copperbar-name
-  desc: cp14-store-sell-copperbar-desc
+  id: GoldBars
+  name: cp14-store-sell-goldbar-name
+  desc: cp14-store-sell-goldbar-desc
   icon: 
-    sprite: _CP14/Objects/Materials/copper_bar.rsi
+    sprite: _CP14/Objects/Materials/gold_bar.rsi
     state: bar_3
   price: 
-    min: 400
-    max: 500
+    min: 1000
+    max: 1500
   service: !type:CP14SellStackService
-    stackId: CP14CopperBar
+    stackId: CP14GoldBar
     count: 10
 
 - type: storePositionSell
@@ -85,3 +85,17 @@
   service: !type:CP14SellStackService
     stackId: CP14WoodenPlanks
     count: 30
+
+- type: storePositionSell
+  id: Glass
+  name: cp14-store-sell-glass-name
+  desc: cp14-store-sell-glass-desc
+  icon: 
+    sprite: _CP14/Objects/Materials/glass.rsi
+    state: glass_3
+  price: 
+    min: 10
+    max: 55
+  service: !type:CP14SellStackService
+    stackId: CP14GlassSheet
+    count: 10
