--- a/Resources/Prototypes/_CP14/Catalog/Cargo/crates.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/crates.yml
@@ -72,13 +72,7 @@
   - type: StorageFill
     contents:
       - id: CP14DemiplaneKeyT1
-        amount: 4
-      - id: CP14DemiplaneKeyT1
-        amount: 1
-        prob: 0.5
-      - id: CP14DemiplaneKeyT2
-        amount: 1
-        prob: 0.2
+        amount: 5
 
 - type: entity
   parent: CP14BrassChest
@@ -110,6 +104,36 @@
       - id: CP14String
         amount: 10
       - id: CP14Cloth10
+        amount: 3
+
+- type: entity
+  parent: CP14BrassChest
+  id: CP14BrassChestFilledCopperBar
+  suffix: 30 Copper bars
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14CopperBar10
+        amount: 3
+
+- type: entity
+  parent: CP14BrassChest
+  id: CP14BrassChestFilledIronBar
+  suffix: 30 Iron bars
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14IronBar10
+        amount: 3
+
+- type: entity
+  parent: CP14BrassChest
+  id: CP14BrassChestFilledGoldBar
+  suffix: 30 Gold bars
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14GoldBar10
         amount: 3
 
 - type: entity
