--- a/Resources/Prototypes/_CP14/Entities/Objects/Tools/bucket.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Tools/bucket.yml
@@ -16,7 +16,7 @@
       state: fill-1
       visible: false
   - type: Item
-    size: Normal
+    size: Ginormous
   - type: SolutionContainerManager
     solutions:
       bucket:
