--- a/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
@@ -15,15 +15,25 @@
         amount: 1
       - id: CP14Dropper
         amount: 1
+      - id: CP14VialTinyReinforced
+        amount: 2
       - id: CP14VialTiny
-        amount: 7
+        amount: 4
+      - id: CP14VialSmallReinforced
+        amount: 2
       - id: CP14VialSmall
-        amount: 5
+        amount: 3
       - id: CP14Paper
         amount: 2
       - id: CP14PenFeather
         amount: 1
         #Random start resource
+      - id: CP14VialSmallHealthPotion
+      - id: CP14VialSmallHealthPotion
+      - id: CP14VialSmallHealthPotion
+      - id: CP14VialSmallManaPotion
+      - id: CP14VialSmallManaPotion
+      - id: CP14VialSmallManaPotion
       - id: CP14VialSmallGroundQuartz
       - id: CP14VialSmallGroundQuartz
       - id: CP14VialSmallBloodFlowerSap
