round end monolith system

--- a/Resources/Audio/_CP14/Effects/attributions.yml
+++ b/Resources/Audio/_CP14/Effects/attributions.yml
@@ -47,3 +47,9 @@
   license: "CC0-1.0"
   copyright: 'by qubodup of Freesound.org.'
   source: "https://freesound.org/people/qubodup/sounds/442771/"
+
+
+- files: ["round_start.ogg", "round_end.ogg"]
+  license: "CC0-1.0"
+  copyright: 'Created by MIXnikita'
+  source: "https://github.com/crystallpunk-14/crystall-punk-14"
