--- a/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
+++ b/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
@@ -1,6 +1,9 @@
 
 # Jobs
 - type: playTimeTracker
+  id: CP14JobApprentice
+
+- type: playTimeTracker
   id: CP14JobAdventurer
 
 - type: playTimeTracker
