--- a/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
@@ -16,15 +16,14 @@
       - id: CP14Dropper
         amount: 1
       - id: CP14VialTinyReinforced
-        amount: 2
+        amount: 1
       - id: CP14VialTiny
-        amount: 4
+        amount: 3
       - id: CP14VialSmallReinforced
-        amount: 2
+        amount: 1
       - id: CP14VialSmall
         amount: 3
-      - id: CP14Paper
-        amount: 2
+      - id: CP14PaperFolderBlue
       - id: CP14PenFeather
         amount: 1
         #Random start resource
@@ -40,8 +39,6 @@
       - id: CP14VialSmallAgaricMushroom
       - id: CP14VialSmallWildSage
       - id: CP14VialSmallBlueAmanita
-      - id: CP14VialTinyChromiumSlime
-      - id: CP14VialTinyLumiMushroom
 
 - type: entity
   parent: CP14WoodenCloset
@@ -123,8 +120,7 @@
       - id: CP14CopperBar10
       - id: CP14IronBar10
       - id: CP14GoldBar5
-      - id: CP14Paper
-        amount: 2
+      - id: CP14PaperFolderRed
       - id: CP14PenFeather
         amount: 1
 
