--- a/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
@@ -15,6 +15,23 @@
   - CP14GeneralKeys
 
 - type: roleLoadout
+  id: JobCP14Apprentice
+  groups:
+  - CP14GeneralSpells
+  - CP14GeneralHead
+  - CP14GeneralEyes
+  - CP14GeneralMask
+  - CP14GeneralCloak
+  - CP14GeneralGloves
+  - CP14GeneralShirt
+  - CP14GeneralPants
+  - CP14GeneralShoes
+  - CP14GeneralBack
+  - CP14GeneralTrinkets
+  - CP14ApprenticeBundle
+  - CP14GeneralKeys
+
+- type: roleLoadout
   id: JobCP14Alchemist
   groups:
   - CP14GeneralSpells
