--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/goblin.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/goblin.yml
@@ -41,6 +41,15 @@
   - type: Damageable
     damageContainer: Biological
     damageModifierSet: CP14Goblin #+25% all damage, -50% poison
+  - type: PassiveDamage
+    allowedStates:
+    - Alive
+    damageCap: 80
+    damage:
+      groups:
+        Burn: -0.2
+      groups:
+        Brute: -0.2
   - type: Stamina
     decay: 5 # 3 default
     critThreshold: 120 # 100 default
