--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
@@ -2,7 +2,7 @@
   save: false
   parent: 
   - BaseMob
-  - MobDamageable
+  - CP14MobDamageable
   - MobCombat
   id: CP14BaseMobSpecies
   categories: [ ForkFiltered ]
