--- a/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/paper.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/paper.yml
@@ -36,7 +36,7 @@
       behaviors:
       - !type:SpawnEntitiesBehavior
         spawn:
-            Ash:
+            CP14Ash1:
               min: 1
               max: 1
       - !type:DoActsBehavior
