--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/scrolls.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/scrolls.yml
@@ -28,7 +28,7 @@
       behaviors:
       - !type:SpawnEntitiesBehavior
         spawn:
-            Ash:
+            CP14Ash1:
               min: 1
               max: 1
       - !type:DoActsBehavior
