--- a/Resources/Prototypes/_CP14/Entities/Structures/Windows/directional.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Windows/directional.yml
@@ -67,7 +67,7 @@
           collection: WindowShatter
       - !type:SpawnEntitiesBehavior
         spawn:
-          ShardGlass:
+          CP14GlassShard:
             min: 1
             max: 1
       - !type:DoActsBehavior
