--- a/Resources/Prototypes/_CP14/Entities/Mobs/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/base.yml
@@ -1,11 +1,10 @@
 - type: entity
   save: false
+  parent: MobDamageable
   id: CP14MobDamageable
   categories: [ ForkFiltered ]
   abstract: true
   components:
-  - type: Damageable
-    damageContainer: Biological
   - type: Destructible
     thresholds:
     - trigger:
@@ -29,37 +28,3 @@
       - !type:PlaySoundBehavior
         sound:
           collection: MeatLaserImpact
-  - type: RadiationReceiver
-  - type: Stamina
-  - type: MobState
-  - type: MobThresholds
-    thresholds:
-      0: Alive
-      100: Critical
-      200: Dead
-  - type: MobStateActions
-    actions:
-      Critical:
-      - ActionCritSuccumb
-      - ActionCritFakeDeath
-      - ActionCritLastWords
-  - type: Deathgasp
-  - type: HealthExaminable
-    examinableTypes:
-    - Blunt
-    - Slash
-    - Piercing
-    - Heat
-    - Shock
-    - Cold
-    - Caustic
-  - type: DamageOnHighSpeedImpact
-    damage:
-      types:
-        Blunt: 5
-    soundHit:
-      path: /Audio/Effects/hit_kick.ogg
-  - type: Pullable
-  - type: LightningTarget
-    priority: 2
-    lightningExplode: false
