--- a/Resources/Prototypes/_CP14/Alerts/alerts.yml
+++ b/Resources/Prototypes/_CP14/Alerts/alerts.yml
@@ -23,7 +23,9 @@
     state: mana8
   - sprite: /Textures/_CP14/Interface/Alerts/mana.rsi
     state: mana9 
+  - sprite: /Textures/_CP14/Interface/Alerts/mana.rsi #TODO: Without this dublication, alerts never be fully null
+    state: mana9 
   name: cp14-alerts-magic-energy-name
   description: cp14-alerts-magic-energy-desc
   minSeverity: 0
-  maxSeverity: 10
+  maxSeverity: 11
